Start styling and write HTML

--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    
+    <div class="container">
+
+      <div class="header">
+        <div class="title">Tic Tac Toe</div>
+      </div>
+
+      <div class="gameboard">
+
+      </div>
+
+      <div class="info">
+        <div class="player-info"></div>
+        <button class="clear">Clear</button>
+      </div>
+
+    </div>
 
     <script src="script.js"></script>
 </body>
