Start coding DOM methods

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
       </div>
 
       <div class="info">
-        <div class="player-info"></div>
+        <div class="player-info">
+          <p id="PlayerOne">Player One</p>
+          <p id="PlayerTwo">Player Two</p>
+        </div>
+
         <button class="clear">Clear</button>
       </div>
 
