Add start new game button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <p id="PlayerTwo">Player Two</p>
         </div>
 
+        <button class="start" style="display: none;">New Game</button>
         <button class="clear">Clear</button>
       </div>
 
