Add blink effect

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
 
       <div class="gameboard">
-
+        <div class="begin">Click New Game to Start!</div>
       </div>
 
       <div class="info">
@@ -28,7 +28,7 @@
           <p id="PlayerTwo">Player Two</p>
         </div>
 
-        <button class="start" style="display: none;">New Game</button>
+        <button class="start" >New Game</button>
         <button class="clear">Clear</button>
       </div>
 
